--- a/Provinsi-Papua.html
+++ b/Provinsi-Papua.html
@@ -204,6 +204,81 @@
                                                 </a>
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <td class="text-center">2</td>
+                                            <td>Biak Numfor</td>
+                                            <td>Biak Selatan</td>
+                                            <td>Samofa</td>
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
+                                                    <i class="fa fa-magic" aria-hidden="true"></i>
+                                                </a>                                               
+
+                                                <a href="#" class="btn btn-danger btn-circle">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">3</td>
+                                            <td>Sentani</td>
+                                            <td>Sentani</td>
+                                            <td>Sentani</td>
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
+                                                    <i class="fa fa-magic" aria-hidden="true"></i>
+                                                </a>                                               
+
+                                                <a href="#" class="btn btn-danger btn-circle">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">4</td>
+                                            <td>Serui</td>
+                                            <td>Serui Kota</td>
+                                            <td>Serui</td>
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
+                                                    <i class="fa fa-magic" aria-hidden="true"></i>
+                                                </a>                                               
+
+                                                <a href="#" class="btn btn-danger btn-circle">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">5</td>
+                                            <td>Jayawijaya</td>
+                                            <td>Jayawijaya Kota</td>
+                                            <td>Jayawijaya</td>
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
+                                                    <i class="fa fa-magic" aria-hidden="true"></i>
+                                                </a>                                               
+
+                                                <a href="#" class="btn btn-danger btn-circle">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">6</td>
+                                            <td>Mamberamo Raya</td>
+                                            <td>Mamberamo</td>
+                                            <td>Mamberamo</td>
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
+                                                    <i class="fa fa-magic" aria-hidden="true"></i>
+                                                </a>                                               
+
+                                                <a href="#" class="btn btn-danger btn-circle">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
 
                                         
 
