--- a/Kabupaten.html
+++ b/Kabupaten.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kategori</title>
+    <title>Kabupaten</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -59,7 +59,7 @@
                     <span>Organisani</span></a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item ">
                 <a class="nav-link" href="Kategori.html">
                     <i class="fas fa-fw fa-th"></i>
                     <span>Kategori</span></a>
@@ -90,7 +90,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <!-- <h6 class="collapse-header">Login Screens:</h6> -->
                         <a class="collapse-item" href="Provinsi.html">Provinsi</a>
-                        <a class="collapse-item" href="Kabupaten.html">Kabupaten</a>
+                        <a class="collapse-item active" href="Kabupaten.html">Kabupaten</a>
                         <a class="collapse-item" href="Distrik.html">Distrik</a>
                         <a class="collapse-item" href="Kelurahan.html">Kelurahan</a>
                     </div>
@@ -182,14 +182,16 @@
                                     <thead">
                                         <tr class="text-center">
                                             <th>No</th>
-                                            <th>Kategori</th>
+                                            <th>Kabupaten/Kota</th>
+                                            <th>Kode Pos</th>
                                             <th>Opsi</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
                                                 <td class="text-center">1</td>
-                                                <td>Sekolah</td>
+                                                <td>Jayapura<d>                                               
+                                                <td>55101<d>
                                                 <td class="text-center">
                                                     <a href="#" class="btn btn-info btn-circle mr-3 ">
                                                         <i class="fa fa-magic" aria-hidden="true"></i>
@@ -207,7 +209,80 @@
 
                                             <tr>
                                                 <td class="text-center">2</td>
-                                                <td>Instasnsi Pemerintah</td>
+                                                <td>Biak Numfor</td>
+                                                <td>55102</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">3</td>
+                                                <td>Sentani</td>
+                                                <td>55103</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">4</td>
+                                                <td>Serui</td>
+                                                <td>55104</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">5</td>
+                                                <td>Jayawijaya</td>
+                                                <td>55105</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">6</td>
+                                                <td>Mamberamo Raya</td>
+                                                <td>55106</td>
                                                 <td class="text-center">
                                                     <a href="#" class="btn btn-info btn-circle mr-3">
                                                         <i class="fa fa-magic" aria-hidden="true"></i>
