--- a/Kategori.html
+++ b/Kategori.html
@@ -33,7 +33,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fa fa-book" aria-hidden="true"></i>
+                    <i class="fa fa-database" aria-hidden="true"></i>
                 </div>
                 <!-- <div class="sidebar-brand-text mx-3">Nokensoft<sup>2</sup></div> -->
                 <div class="sidebar-brand-text mx-3">Nokensoft</div>
